# SuPerSim

./: README.md  evolution.py  functions_Aksaut.py  functions_diff_warming.py  functions_summary.py  model.py  mytime.py  open.py  percentiles.py  pickling.py  produce_plots_Aksaut_North_spin_up.ipynb  produce_plots_report3.ipynb  pyproject.toml  requirements.txt  runningstats.py  seasonal.py  to_do.txt  topoheatmap.py  weights.py  yearlystats.py
SuPerSim/: pickling.py  seasonal.py
docs/: Introduction.rst  Running.rst
examples/: comparison.ipynb  produce_plots_North.ipynb  produce_plots_South.ipynb  test.ipynb  test_plot.ipynb
examples/Aksaut_Caucasus/: comparison.ipynb  comparison_Aksaut.ipynb  produce_plots_Aksaut_North.ipynb  produce_plots_Aksaut_South.ipynb
examples/Aksaut_Caucasus/python_pickles/: df_Aksaut_North.pkl  df_Aksaut_South.pkl  df_stats_Aksaut_North.pkl  list_valid_sim_Aksaut_North.pkl  melt_out_Aksaut_North.pkl
examples/data/: horizon.csv
examples/data/North/: folder_manifest.csv  metadata_North.csv
examples/data/South/: folder_manifest.csv  metadata_South.csv
examples/python_pickles/: Aksaut_North_captions_readable.txt  Aksaut_South_captions_readable.txt  df_Aksaut_North.pkl  df_Aksaut_South.pkl  df_stats_Aksaut_North.pkl  df_stats_Aksaut_South.pkl  melt_out_Aksaut_South.pkl  reanalysis_stats_Aksaut_North.pkl  reanalysis_stats_Aksaut_South.pkl  rockfall_values_Aksaut_North.pkl
src/: constants.py  evolution.py  functions_summary.py  percentiles.py
src/SuPerSim/: __init__.py  captions.py  constants.py  evolution.py  functions_summary.py  horizon.py  legends.py  model.py  mytime.py  open.py  percentiles.py  pickling.py  plotblocks.py  preparation.py  runningstats.py  seasonal.py  test.py  topoheatmap.py  weights.py  yearlystats.py
tests/: produce_plots_Aksaut_North_spin_up.ipynb
