[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SuPerSim"
version = "0.1.1"
authors = [
    {name = "Victor Pozsgay", email = "victorpozsgay@cunet.carleton.ca"},
]
description = "Summary statistics and plots for ensemble Permafrost Simulations"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]

[project.urls]
Homepage = "https://github.com/VictorPozsgay/SuPerSim"
