[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SuPerSim"
version = "1.2.0"
authors = [
    {name = "Victor Pozsgay", email = "victorpozsgay@cunet.carleton.ca"},
]
description = "Summary statistics and plots for ensemble Permafrost Simulations"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/VictorPozsgay/SuPerSim"